--- a/011_OOP/Homework_Address/Homework_Address.csproj
+++ b/011_OOP/Homework_Address/Homework_Address.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F828618D-E853-4A50-92BB-3C2BA24407A6}</ProjectGuid>
+    <ProjectGuid>{C026B765-5300-4D8A-A0B3-7EC177A4CF5A}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Homework_Book</RootNamespace>
-    <AssemblyName>Homework_Book</AssemblyName>
+    <RootNamespace>Homework_Address</RootNamespace>
+    <AssemblyName>Homework_Address</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,12 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Author.cs" />
-    <Compile Include="Book.cs" />
-    <Compile Include="Content.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Title.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
