--- a/02_C#_Essential/003_Classes/Homework/002_Printer/002_Printer.csproj
+++ b/02_C#_Essential/003_Classes/Homework/002_Printer/002_Printer.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_01_Printer</RootNamespace>
+    <RootNamespace>_002_Printer</RootNamespace>
   </PropertyGroup>
 
 </Project>
